{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 15,
  "lineage": "14fc8dd5-a186-4cb1-4fc5-e9379d702020",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0839e1c0e8856eb5f",
            "domain": "vpc",
            "id": "eipalloc-0839e1c0e8856eb5f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-208-197-61.compute-1.amazonaws.com",
            "public_ip": "54.208.197.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:internet-gateway/igw-0e67a4117435c4351",
            "id": "igw-0e67a4117435c4351",
            "owner_id": "018083693290",
            "tags": {
              "Name": "staging-igw"
            },
            "tags_all": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-03236201609386d5f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0839e1c0e8856eb5f",
            "association_id": "eipassoc-0fcb7ff37dbead4dd",
            "connectivity_type": "public",
            "id": "nat-083ef1366da5f38b1",
            "network_interface_id": "eni-0f24896992afece61",
            "private_ip": "10.0.64.87",
            "public_ip": "54.208.197.61",
            "subnet_id": "subnet-0516f7ca37ef4733a",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:route-table/rtb-00fd92c01c223371e",
            "id": "rtb-00fd92c01c223371e",
            "owner_id": "018083693290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083ef1366da5f38b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-private"
            },
            "tags_all": {
              "Name": "staging-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03236201609386d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:route-table/rtb-0bb66d239c1a7d1f7",
            "id": "rtb-0bb66d239c1a7d1f7",
            "owner_id": "018083693290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e67a4117435c4351",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-public"
            },
            "tags_all": {
              "Name": "staging-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03236201609386d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057d9494e733298de",
            "route_table_id": "rtb-00fd92c01c223371e",
            "subnet_id": "subnet-0b4d138f8c588ed3b"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e43b4fae05eee678",
            "route_table_id": "rtb-00fd92c01c223371e",
            "subnet_id": "subnet-097ec87f50d7a6387"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b43a6a2b0f8b4de5",
            "route_table_id": "rtb-0bb66d239c1a7d1f7",
            "subnet_id": "subnet-0516f7ca37ef4733a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0637249c77cc74134",
            "route_table_id": "rtb-0bb66d239c1a7d1f7",
            "subnet_id": "subnet-0f0723adfc87069ef"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:subnet/subnet-0b4d138f8c588ed3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d138f8c588ed3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018083693290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-us-east-1a",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-1a",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03236201609386d5f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:subnet/subnet-097ec87f50d7a6387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097ec87f50d7a6387",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018083693290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-us-east-1b",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-1b",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03236201609386d5f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:subnet/subnet-0516f7ca37ef4733a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0516f7ca37ef4733a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018083693290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-us-east-1a",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-1a",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03236201609386d5f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:subnet/subnet-0f0723adfc87069ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0723adfc87069ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018083693290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-us-east-1b",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-1b",
              "kubernetes.io/cluster/dev-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03236201609386d5f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018083693290:vpc/vpc-03236201609386d5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c244f68425b7283",
            "default_route_table_id": "rtb-06a3f03909d348271",
            "default_security_group_id": "sg-066d1debcd6bd4ad5",
            "dhcp_options_id": "dopt-00a2ffee2abf301b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03236201609386d5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a3f03909d348271",
            "owner_id": "018083693290",
            "tags": {
              "Name": "staging-main"
            },
            "tags_all": {
              "Name": "staging-main"
            }
          }
        }
      ]
    }
  ]
}